// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-AxheI hHispj k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxjAm jidNFm sc-AxhCb gxwtWg k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-AxirZ cbemLT k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<div
  className="sc-AxheI hHispj k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxjAm jidNFm sc-AxhCb bFrzYz k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-AxirZ cbemLT k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<div
  className="sc-AxheI hHispj k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxjAm jidNFm sc-AxhCb gxwtWg k-Card__imageContainer"
  >
    <div
      className="sc-AxiKw dGvhnc"
    >
      <span
        className="k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="sc-AxirZ cbemLT k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="sc-AxheI hHispj k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxjAm jidNFm sc-AxhCb gxwtWg k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-AxirZ cbemLT k-Card__image"
      src=""
    />
  </div>
</div>
`;
